2016/7/24 v74
	1. Only display buff/defuff that duration less than 1 min on nameplates.

2016/7/24 v73
	1. Make the rune bar not flash when it appears.

2016/7/23 v72
	1. Fix the rune bar would be shown on non-player's nameplate.

2016/7/23 v71
	1. Active the name plate module.

2016/7/22 v69
	1. Replace the status bar's texture, make it looks a little better.

2016/07/22 v68
	1. Fix the hidden mana bar's background color

2016/07/22 v67
	1. Fix bugs of the spell cooldown line and auto popup action bar system.

2016/07/21 v66
	1. Update for wow 7.0, reset the player settings.

2016/07/10 v65
	1. Add Germination to the need show buff list.

2016/07/05 v64
	1. Fix the quest mover not work until reload game once.

2016/07/04 v63
	1. An unit watch panel is added to monitor units like target, focus and etc.
	2. Harmful and helpful spell can be binded with the same key, require IGAS v93 and more lastest versions.

2016/07/01 v62
	1. You can resize the quest list to fix the quest can't be displayed.

2016/06/30 v61
	1. "Hide Global cooldown" is added for action bar.

2016/06/29 v60
	1. You can use cooldown label for the action buttons.
	2. You can modify the raidpanel's aura size.
	3. The raid panel's settings will follow the character's Specialization.

2016/06/21 v59
	1. You can color the action button with colors under several conditions.

2016/06/11 v58
	1. You can choose "Use reverse order" to generate item list.

2016/06/11 v57
	1. The objective tracker frame can be move to anywhere now.

2016/06/10 v56
	1. Stance bar no longer show empty slot.

2016/06/06 v55
	1. Continue fix stance bar.

2016/06/06 v54
	1. Stance bar no longer diplay empty action buttons.
	2. No longer control the CompactRaidFrame since you can decide what to do with it yourself.

2016/06/06 v53
	1. Fix the auto-gen fail when switch the client's language.

2016/06/06 v52
	1. The auto hide stance bar won't be shown when updated.